test/typechecker.d/invalid/fns3.surc.bad
f(x: Integer): Integer = x + 1

g(x: Integer): Integer = fndo
	var r <- 'a' >> f
	return r
